# stripe-fee-crawler

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/stripe_fee_crawler/: __init__.py  _common.py  _git.py  classify.py  cli.py  components.py  crawler.py  currencies.py  discovery.py  exceptions.py  extract.py  http.py  http_cache.py  market_detection.py  models.py  normalize.py  output.py  payment_methods.py  pricing_tokens.py  regression.py  rich_text.py  validation.py
src/stripe_fee_crawler/classify/: __init__.py  _util.py  components.py  dedup.py  dimensions.py  evidence.py  grouping.py  tables.py
src/stripe_fee_crawler/validation/: __init__.py  publication.py  schemas.py  semantic_rules.py
tests/: __init__.py  conftest.py  test_cache.py  test_classify.py  test_cli.py  test_components.py  test_crawler.py  test_discovery.py  test_extract.py  test_http.py  test_models.py  test_normalize.py  test_output.py  test_pricing_tokens.py  test_regression.py  test_validation.py
tests/fixtures/: changed-structure.html  de-lpm.html  de-pricing.html  from-pricing.html  jp-pricing.html  malformed.html  unsupported.html  us-lpm.html  us-pricing.html
