[project]
name = "stripe-fee-crawler"
version = "0.1.0"
description = "Automated collection of public Stripe merchant fee data"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
]

[project.scripts]
stripe-fee-crawler = "stripe_fee_crawler.cli:main"

[project.urls]
Homepage = "https://github.com/smeinecke/stripe-fee-crawler"
Repository = "https://github.com/smeinecke/stripe-fee-crawler"
Issues = "https://github.com/smeinecke/stripe-fee-crawler/issues"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bandit>=1.7.9",
    "pre-commit>=3.7.0",
    "pyright>=1.1.370",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".venv", "build", "dist", "docs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "B011"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=stripe_fee_crawler",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "live: tests that hit the live Stripe website",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests", "docs"]
